// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PhoneEvent/> render() should render with "View ticket" link" 1`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <div
          class="logo"
          style="mask-image: url(test-file-stub);"
        />
      </div>
      <span
        class="actionName"
      >
        Phone conversation started
      </span>
      <span>
        <span
          class="ml-2 mr-2"
        >
          -
        </span>
        <a
          to="/app/ticket/123"
        >
          View ticket
        </a>
      </span>
    </div>
  </div>
</div>
`;

exports[`<PhoneEvent/> render() should render with closed details 1`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <div
          class="logo"
          style="mask-image: url(test-file-stub);"
        />
      </div>
      <span
        class="actionName"
      >
        Call forwarded to an external number
      </span>
      <span>
        <i
          class="material-icons blue eventDetailsIcon cursor-pointer"
        >
          keyboard_arrow_down
        </i>
      </span>
    </div>
  </div>
</div>
`;

exports[`<PhoneEvent/> render() should render with closed details 2`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <div
          class="logo"
          style="mask-image: url(test-file-stub);"
        />
      </div>
      <span
        class="actionName"
      >
        Call forwarded to a Gorgias number
      </span>
      <span>
        <i
          class="material-icons blue eventDetailsIcon cursor-pointer"
        >
          keyboard_arrow_down
        </i>
      </span>
    </div>
  </div>
</div>
`;

exports[`<PhoneEvent/> render() should render with closed details 3`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <div
          class="logo"
          style="mask-image: url(test-file-stub);"
        />
      </div>
      <span
        class="actionName"
      >
        Call forwarded
      </span>
    </div>
  </div>
</div>
`;

exports[`<PhoneEvent/> render() should render with closed details 4`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <div
          class="logo"
          style="mask-image: url(test-file-stub);"
        />
      </div>
      <span
        class="actionName"
      >
        Message played
      </span>
      <span>
        <i
          class="material-icons blue eventDetailsIcon cursor-pointer"
        >
          keyboard_arrow_down
        </i>
      </span>
    </div>
  </div>
</div>
`;
